fix too long data

--- a/app/client/src/components/ui/TaskCard/TaskCard.scss
+++ b/app/client/src/components/ui/TaskCard/TaskCard.scss
@@ -28,6 +28,9 @@
 
         .title {
             font-size: 22px;
+            width: 400px;
+            overflow: hidden;
+            text-overflow: ellipsis;
         }
 
         .date {
